--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,17 @@
 
     <system.web>
       <compilation debug="true" targetFramework="4.5" />
-      <httpRuntime targetFramework="4.5" />
-    </system.web>
+      <httpRuntime  targetFramework="4.5"
+        maxRequestLength="350000" 
+       enableVersionHeader="false" 
+       maxQueryStringLength="3584" 
+      executionTimeout="600"/>
+      <sessionState cookieless="true"
+       regenerateExpiredSessionId="true" />
+  </system.web>
+  <connectionStrings>
+    <add name="ToyStoreConnectionString" connectionString="Data Source=LAPTOP-5JJL4M63\SQLEXPRESS;Initial Catalog=ToyStore;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
 </configuration>
